# memory-management-simulator

./: .gitignore  CMakeLists.txt  README.md  TECHNICAL_DOCUMENTATION.md  TEST_ARTIFACTS.md  build.bat  build.sh  run_all_tests.bat  run_all_tests.sh  test_all_features.txt  validate_results.py
Demonstration/: DEMONSTRATION_MATERIALS.md
Documentation/: TECHNICAL_DOCUMENTATION.md  TEST_ARTIFACTS.md
results/: allocation_failure_result.txt  allocator_comparison_result.txt  cache_hit_result.txt  fragmentation_result.txt  integration_result.txt  lru_result.txt  multilevel_cache_result.txt  page_fault_result.txt  seq_alloc_result.txt  stress_allocation_result.txt  translation_result.txt
src/: main.cpp
src/CLI/: cli.hpp
src/allocator/: memory.hpp
src/cache/: cache.hpp
src/virtual memory/: virtual.hpp
tests/: README.md  allocation_failure_test.txt  allocator_comparison.txt  basic_translation_test.txt  cache_hit_test.txt  fragmentation_test.txt  full_system_test.txt  lru_replacement_test.txt  multilevel_cache_test.txt  page_fault_test.txt  sequential_allocation.txt  stress_allocation_test.txt
